# TribitsExperimentProject

./: CMakeLists.txt  README.md  REAMDE.rst
lib1/: CMakeLists.txt  lib1.cpp  lib1.hpp  test_lib1.cpp
lib2/: CMakeLists.txt  lib2.cpp  lib2.hpp  test_lib2.cpp
