INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_PROPERTY(DIRECTORY  APPEND  PROPERTY  PACKAGE_LIBRARY_DIRS
  ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(lib1
  lib1.hpp lib1.cpp
  )

GET_DIRECTORY_PROPERTY(INCLUDE_DIRS_CURRENT  INCLUDE_DIRECTORIES)

TARGET_INCLUDE_DIRECTORIES(lib1
  BEFORE PUBLIC ${INCLUDE_DIRS_CURRENT}
  )

GET_TARGET_PROPERTY(lib1_INCLUDE_DIRS lib1 INTERFACE_INCLUDE_DIRECTORIES)
SET(lib1_INCLUDE_DIRS "${lib1_INCLUDE_DIRS}" CACHE INTERNAL "") 
MESSAGE("-- lib1_INCLUDE_DIRS = '${lib1_INCLUDE_DIRS}'")

GET_DIRECTORY_PROPERTY(lib1_LIBRARY_DIRS  PACKAGE_LIBRARY_DIRS)
SET(lib1_LIBRARY_DIRS "${lib1_LIBRARY_DIRS}" CACHE INTERNAL "") 
MESSAGE("-- lib1_LIBRARY_DIRS = '${lib1_LIBRARY_DIRS}'")

ADD_EXECUTABLE(test_lib1 test_lib1.cpp)
TARGET_LINK_LIBRARIES(test_lib1 lib1)

ADD_TEST(test_lib1 test_lib1)
