INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(lib2
  lib2.hpp lib2.cpp
  )
TARGET_LINK_LIBRARIES(lib2 lib1)

GET_DIRECTORY_PROPERTY(INCLUDE_DIRS_CURRENT  INCLUDE_DIRECTORIES)

TARGET_INCLUDE_DIRECTORIES(lib2
  BEFORE PUBLIC ${INCLUDE_DIRS_CURRENT}
  )

ADD_EXECUTABLE(test_lib2 test_lib2.cpp)
TARGET_LINK_LIBRARIES(test_lib2 lib2)

ADD_TEST(test_lib2 test_lib2)
