INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET_PROPERTY(DIRECTORY  APPEND  PROPERTY  PACKAGE_LIBRARY_DIRS
  ${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(lib2
  lib2.hpp lib2.cpp
  )
TARGET_LINK_LIBRARIES(lib2 lib1)

GET_DIRECTORY_PROPERTY(INCLUDE_DIRS_CURRENT  INCLUDE_DIRECTORIES)

TARGET_INCLUDE_DIRECTORIES(lib2 BEFORE PUBLIC ${lib1_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(lib2 BEFORE PUBLIC ${INCLUDE_DIRS_CURRENT})

GET_TARGET_PROPERTY(lib2_INCLUDE_DIRS lib2 INTERFACE_INCLUDE_DIRECTORIES)
LIST(REMOVE_DUPLICATES lib2_INCLUDE_DIRS)
MESSAGE("-- lib2_INCLUDE_DIRS = '${lib2_INCLUDE_DIRS}'")

GET_DIRECTORY_PROPERTY(lib2_LIBRARY_DIRS  PACKAGE_LIBRARY_DIRS)
SET(lib2_LIBRARY_DIRS "${lib2_LIBRARY_DIRS}:${lib1_LIBRARY_DIRS}")
MESSAGE("-- lib2_LIBRARY_DIRS = '${lib2_LIBRARY_DIRS}'")

ADD_EXECUTABLE(test_lib2 test_lib2.cpp)
TARGET_LINK_LIBRARIES(test_lib2 lib2)

ADD_TEST(test_lib2 test_lib2)
